# web-browser-engineering-step-by-step

./: .gitignore  CHANGELOG.md  Makefile  README.md  agents.md  pyproject.toml
browser/: browser.css  main.py  runtime.js
docker/: Dockerfile  Dockerfile.server  local.conf
mybrowser/: main.py
mybrowser/tests/: test_url.py
server/: comment.js  eventloop.js  server.py
